force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/cpm__Recurring_Payment_Schedule__c.object-meta.xml
<CustomObject>
    <label>Recurring Payment Schedule</label>
    <nameField>
        <label>Recurring Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>