force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Additional_SOQL__c.field-meta.xml
<CustomField>
    <fullName>cpm__Additional_SOQL__c</fullName>
    <inlineHelpText>Used directly, without any change or processing, into the Additional SOQL field of the generated Payment Schedule records. Refer to Payment Schedule documentation for more help on this field.</inlineHelpText>
    <label>Additional SOQL</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>