force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>cpm__Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For all previewed payment schedule records it will be checked if the calculated run and collection dates are on a working day. If not, it will be clearly indicated to the user in the Generated Payment Scheduled Preview section. The related Business Hours record defined by this field is used to determine whether a specific date is a valid working day. Note that 13:00 / 1pm is used to check if a specific date is a valid working day.</description>
    <inlineHelpText>Business Hours record that is used for checking if calculated run and collection dates are on a working day.</inlineHelpText>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Recurring Payment Schedules</relationshipLabel>
    <relationshipName>Recurring_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>