force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Collect_on_Thursday__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collect_on_Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if payment schedules should be collected on Thursday.</inlineHelpText>
    <label>Collect on Thursday</label>
    <type>Checkbox</type>
</CustomField>