force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Collect_on_Tuesday__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collect_on_Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if payment schedules should be collected on Tuesday.</description>
    <inlineHelpText>Check if payment schedules should be collected on Tuesday.</inlineHelpText>
    <label>Collect on Tuesday</label>
    <type>Checkbox</type>
</CustomField>