force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Collect_on_Wednesday__c.field-meta.xml
<CustomField>
    <fullName>cpm__Collect_on_Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if payment schedules should be collected on Wednesday.</description>
    <inlineHelpText>Check if payment schedules should be collected on Wednesday.</inlineHelpText>
    <label>Collect on Wednesday</label>
    <type>Checkbox</type>
</CustomField>