force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__End_Date__c</fullName>
    <inlineHelpText>End date of the period that payment schedule records will be generated for. Payment schedule records will be generated with a collection date until the end date, but not after the end date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>