force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Exclude_from_Auto_Run__c.field-meta.xml
<CustomField>
    <fullName>cpm__Exclude_from_Auto_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you are creating a schedule that you want to run manually by changing the schedule status, please select this option. If Auto Run is enabled, this schedule will otherwise be run automatically.</inlineHelpText>
    <label>Exclude from auto-collect</label>
    <type>Checkbox</type>
</CustomField>