force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Finished_Status__c.field-meta.xml
<CustomField>
    <fullName>cpm__Finished_Status__c</fullName>
    <inlineHelpText>Used directly, without any change or processing, into the Finished Status field of the generated Payment Schedule records. Refer to Payment Schedule documentation for more help on this field.</inlineHelpText>
    <label>Finished Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- Provided by Sys Admin --</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>