force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Initial_Generated_JSON__c.field-meta.xml
<CustomField>
    <fullName>cpm__Initial_Generated_JSON__c</fullName>
    <inlineHelpText>Log field filled by system. Do not change. Contains the generated payment schedules preview json before any changes by the user.</inlineHelpText>
    <label>Initial Generated JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>