force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Payment_Journey__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Journey</label>
    <referenceTo>cpm__Payment_Journey__c</referenceTo>
    <relationshipLabel>Recurring Payment Schedules</relationshipLabel>
    <relationshipName>Recurring_Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>