force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>cpm__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreditCard</fullName>
            </value>
            <value>
                <fullName>BACS Direct Debit</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>GiftAid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>