force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Run_of_Days_before_Collection_date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Run_of_Days_before_Collection_date__c</fullName>
    <inlineHelpText>Used to calculate the run date. Collection date is calculated first and then this field is used to determine the run date. If a Business Hours record is attached, business days will be subtracted. If not, days, including weekends, are subtracted.</inlineHelpText>
    <label>Run # of Business Days before Coll. Date</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>