force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Selection_Day_Strategy__c.field-meta.xml
<CustomField>
    <fullName>cpm__Selection_Day_Strategy__c</fullName>
    <inlineHelpText>Strategy used to calculate the selection day. Available strategies:
- Same as Collection Date: Same as Collection Date.
- Last day of Month: Last day of this month.</inlineHelpText>
    <label>Selection Day Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as Collection Date</fullName>
            </value>
            <value>
                <fullName>Last day of Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>