force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>cpm__Start_Date__c</fullName>
    <inlineHelpText>Start date of the period that payment schedule records will be generated for. Payment schedule records will be generated with a collection date as of the start date, but not before the start date.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>