force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/fields/cpm__Stored_JSON__c.field-meta.xml
<CustomField>
    <fullName>cpm__Stored_JSON__c</fullName>
    <inlineHelpText>Log field filled by system. Do not change. Contains the payment schedules preview json after any changes by the user.</inlineHelpText>
    <label>Stored JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>