force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/recordTypes/cpm__Weekly.recordType-meta.xml
<RecordType>
    <fullName>cpm__Weekly</fullName>
    <active>true</active>
    <label>Weekly</label>
</RecordType>