force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/validationRules/cpm__Collection_Day_required_for_Weekly.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Collection_Day_required_for_Weekly</fullName>
    <active>true</active>
    <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Weekly&apos;,
cpm__Collect_on_Monday__c = false,
cpm__Collect_on_Tuesday__c = false,
cpm__Collect_on_Wednesday__c = false,
cpm__Collect_on_Thursday__c = false,
cpm__Collect_on_Friday__c = false,
cpm__Collect_on_Saturday__c = false,
cpm__Collect_on_Sunday__c = false
),true,false)</errorConditionFormula>
    <errorMessage>Please select one or more days to collect on</errorMessage>
</ValidationRule>