force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/validationRules/cpm__Day_of_month_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Day_of_month_validation</fullName>
    <active>true</active>
    <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Monthly&apos;,
ISPICKVAL( cpm__Monthly_Collection_Day_Strategy__c , &apos;Day of Month&apos;),
ISBLANK(TEXT( cpm__Targeted_Collection_Day_of_Month__c ))
),true,false)</errorConditionFormula>
    <errorDisplayField>cpm__Targeted_Collection_Day_of_Month__c</errorDisplayField>
    <errorMessage>Targeted Collection Day of Month is required for &apos;Day of Month&apos; strategy</errorMessage>
</ValidationRule>