force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/validationRules/cpm__Mandatory_Field_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Mandatory_Field_Check</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( OR ( ISBLANK(TEXT(cpm__Payment_Processor__c)) , ISBLANK (TEXT(cpm__Payment_Method__c)), ISBLANK(TEXT(cpm__Source__c)) ), true, false )</errorConditionFormula>
    <errorMessage>Payment Method, Payment Processor and Source are required</errorMessage>
</ValidationRule>