force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/validationRules/cpm__Monthly_Collection_Strategy_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Monthly_Collection_Strategy_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>if (AND (RecordType.DeveloperName == &apos;Monthly&apos;,ISBLANK(TEXT( cpm__Monthly_Collection_Day_Strategy__c ))),true,false)</errorConditionFormula>
    <errorDisplayField>cpm__Monthly_Collection_Day_Strategy__c</errorDisplayField>
    <errorMessage>Monthly Collection Day Strategy is required</errorMessage>
</ValidationRule>