force-app/main/default/objects/cpm__Recurring_Payment_Schedule__c/validationRules/cpm__Monthly_Target_Collection_Day_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cpm__Monthly_Target_Collection_Day_Validation</fullName>
    <active>true</active>
    <description>Duplicate</description>
    <errorConditionFormula>1==2</errorConditionFormula>
    <errorDisplayField>cpm__Targeted_Collection_Day_of_Month__c</errorDisplayField>
    <errorMessage>Targeted Collection Day of Month is required</errorMessage>
</ValidationRule>